Allow word wrapping to break within a word to fix the layout of long tokens like paths.

--- a/stylesheets/screen.sass
+++ b/stylesheets/screen.sass
@@ -39,6 +39,7 @@ code, tt
   font-family: Menlo, Monaco, Courier, 'Courier New', monospace
   font-size: 0.90em
   letter-spacing: 1.1pt
+  word-wrap: break-word
   li &, p &
     background-color: #F4F4F4
     padding: 0 0.25em
